[package]
name = "blackbeard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tetra = "0.6"
rapier2d = { version = "0.9.2", features = ["enhanced-determinism"] }
crossbeam-channel = "0.5.1"
rand = "0.8.4"
binary_stream = { path = "../binary_stream" }
laminar = "0.5.0"
#laminar = { path = "../laminar" }
nalgebra = "0.29"
indexmap = "1.7.0"